Fix horizontal overflow when items are hovered

--- a/assets/scss/components/navigation/_main-navigation.scss
+++ b/assets/scss/components/navigation/_main-navigation.scss
@@ -20,6 +20,7 @@
 	@media (max-width: 63.9375em) {
 		.no-scroll & {
 			overflow-y: scroll;
+			overflow-x: hidden;
 		}
 	}
 	
